Changed the slicer type names to: planar, curved, adapative and planar_meshcut. WIP with implementing the meshcut library for slicing an STL (example 3)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\envs\\paths-dev\\python.exe"
+    "python.pythonPath": "C:\\Users\\joburger\\Anaconda3\\envs\\ita19\\python.exe"
 }
