--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\envs\\compas_am\\python.exe"
+    "python.pythonPath": "C:\\Users\\joburger\\Anaconda3\\envs\\ita19\\python.exe"
 }
