--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/compas-dev/compas_fab.git#egg=compas_fab
+compas_fab @ git+https://github.com/compas-dev/compas_fab.git#egg=compas_fab
 
 #compas_fab>=0.11,<0.12,
 
