--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,12 @@
 name: build
 
 on:
-  # Trigger the workflow on push or pull request,
-  # but only for the main branch
- push:
-   branches:
-     - main
- pull_request:
-   branches:
-     - main
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
@@ -30,14 +28,12 @@ jobs:
           - name: "ubuntu-py36"
             os: ubuntu-latest
             python-version: 3.6
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -45,13 +41,9 @@ jobs:
       - name: Install
         run: |
           python -m pip install --no-cache-dir -r requirements-dev.txt
-
-
-       # run tests
       - name: Run linter
         run: |
-         invoke lint
+          invoke lint
       - name: Run tests
-        id: testing
         run: |
           invoke test
