--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,13 +1,12 @@
 name: docs
 
 on:
-  [push]
-#  push:
-#    branches:
-#      - master
-#  pull_request:
-#    branches:
-#      - master
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
@@ -19,38 +18,38 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-#       - name: Install dependencies
-#         run: |
-#           python -m pip install --upgrade pip
-#           python -m pip install cython --install-option="--no-cython-compile"
-#       - name: Install
-#         run: |
-#           python -m pip install --no-cache-dir -r requirements-dev.txt
-#       - name: Generate docs
-#         if: ${{ success() }}
-#         run: |
-#           rm -rf dist/docs && invoke docs
-#           # Get branch/tag/latest name from git
-#           GITHUB_REF_REGEX="tags/([0-9a-zA-Z\.\-]+)|(pull/[0-9]+)|heads/(.+)"
-#           if [[ $GITHUB_REF =~ $GITHUB_REF_REGEX ]]; then
-#             if [[ $BASH_REMATCH = pull* ]]; then
-#               BRANCH_OR_TAG=pull_${BASH_REMATCH##*/}
-#             else
-#               BRANCH_OR_TAG=${BASH_REMATCH##*/}
-#             fi;
-#             if [[ $BRANCH_OR_TAG = master ]]; then
-#               BRANCH_OR_TAG=latest
-#             fi;
-#           fi;
-#           echo "Docs will be deployed to https://github.com/dbt-ethz/compas_slicer/$BRANCH_OR_TAG"
-#           mkdir -p deploy/compas_slicer/$BRANCH_OR_TAG && mv -T dist/docs dist/docs/$BRANCH_OR_TAG/
-
-#       - name: Deploy docs
-#         if: success()
-#         uses: crazy-max/ghaction-github-pages@v2
-#         with:
-#           target_branch: gh_docs 
-#           build_dir: dist/docs 
-#           keep_history: true
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install cython --install-option="--no-cython-compile"
+      - name: Install
+        run: |
+          python -m pip install --no-cache-dir -r requirements-dev.txt
+      - name: Generate docs
+        if: ${{ success() }}
+        run: |
+          invoke docs
+          # Get branch/tag/latest name from git
+          GITHUB_REF_REGEX="tags/([0-9a-zA-Z\.\-]+)|(pull/[0-9]+)|heads/(.+)"
+          if [[ $GITHUB_REF =~ $GITHUB_REF_REGEX ]]; then
+            if [[ $BASH_REMATCH = pull* ]]; then
+              BRANCH_OR_TAG=pull_${BASH_REMATCH##*/}
+            else
+              BRANCH_OR_TAG=${BASH_REMATCH##*/}
+            fi;
+            if [[ $BRANCH_OR_TAG = master ]]; then
+              BRANCH_OR_TAG=latest
+            fi;
+          fi;
+          echo "Docs will be deployed to https://github.com/dbt-ethz/compas_slicer/$BRANCH_OR_TAG"
+          mkdir -p deploy/compas_slicer/$BRANCH_OR_TAG && mv -T dist/docs deploy/compas_slicer/$BRANCH_OR_TAG/
+      - name: Deploy docs
+        if: success()
+        uses: crazy-max/ghaction-github-pages@v2
+        with:
+          repo: https://github.com/dbt-ethz/compas_slicer
+          target_branch: master
+          build_dir: deploy
+          keep_history: true
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
