--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,9 +36,9 @@ jobs:
       - name: Install
         run: |
           python -m pip install --no-cache-dir -r requirements-dev.txt
-      - name: Run linter
-        run: |
-          invoke lint
+#       - name: Run linter
+#         run: |
+#           invoke lint
       - name: Run tests
         run: |
           invoke test
