--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,12 +23,14 @@ jobs:
           - name: "ubuntu-py36"
             os: ubuntu-latest
             python-version: 3.6
+
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -36,9 +38,38 @@ jobs:
       - name: Install
         run: |
           python -m pip install --no-cache-dir -r requirements-dev.txt
+
+
+      # run tests
 #       - name: Run linter
 #         run: |
 #           invoke lint
       - name: Run tests
         run: |
           invoke test
+
+#      # find pull request
+#        - name: Find Pull Request
+#          uses: juliangruber/find-pull-request-action@v1
+#          id: find-pull-request
+#          with:
+#            github-token: ${{ secrets.GITHUB_TOKEN }}
+#            branch: my-branch-name
+#        - run: echo "Pull Request ${number} (${sha})"
+#          env:
+#            number: ${{ steps.find-pull-request.outputs.number }}
+#            sha: ${{ steps.find-pull-request.outputs.head-sha }}
+#
+#      # comment pull request
+#      - name: Comment pull request
+#        uses: thollander/actions-comment-pull-request@master
+#        with:
+#          message: 'Example of message !'
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#
+#      # approve pull request
+#      - name: Approve Pull Request
+#        uses: juliangruber/approve-pull-request-action@v1
+#        with:
+#          github-token: ${{ secrets.GITHUB_TOKEN }}
+#          number: 1
