--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,16 @@
 [bdist_wheel]
 universal = 1
 
+[flake8]
+max-line-length = 180
+exclude =
+    .git,
+    __pycache__,
+    docs,
+    build,
+    temp,
+    dist
+
 [tool:pytest]
 testpaths = tests
 
@@ -18,3 +28,5 @@ addopts =
     --doctest-modules
     --doctest-glob=\*.rst
     --tb=short
+
+
