--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,14 @@
 name: build
 
 on:
-  [push]
   # Trigger the workflow on push or pull request,
   # but only for the main branch
-#  push:
-#    branches:
-#      - main
-#  pull_request:
-#    branches:
-#      - main
+ push:
+   branches:
+     - main
+ pull_request:
+   branches:
+     - main
 
 jobs:
   build:
