--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,13 +1,13 @@
 name: docs
 
 on:
-  [push]
-#  push:
-#    branches:
-#      - master
-#  pull_request:
-#    branches:
-#      - master
+#   [push]
+ push:
+   branches:
+     - master
+ pull_request:
+   branches:
+     - master
 
 jobs:
   build:
