--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,13 +1,13 @@
 name: docs
 
 on:
-#   [push]
- push:
-   branches:
-     - master
- pull_request:
-   branches:
-     - master
+  [push]
+#  push:
+#    branches:
+#      - master
+#  pull_request:
+#    branches:
+#      - master
 
 jobs:
   build:
@@ -45,17 +45,17 @@ jobs:
           echo "Docs will be deployed to https://github.com/dbt-ethz/compas_slicer/$BRANCH_OR_TAG"
           mkdir -p deploy/compas_slicer/$BRANCH_OR_TAG && mv -T dist/docs deploy/compas_slicer/$BRANCH_OR_TAG/
 
-      - name: Extract branch name
-        run: |
-          echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        id: extract_branch
+#       - name: Extract branch name
+#         run: |
+#           echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+#         id: extract_branch
 
       - name: Deploy docs
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
         with:
-          target_branch: ${{ steps.extract_branch.outputs.branch }}
-          build_dir: deploy/compas_slicer
+          target_branch: gh_docs  #${{ steps.extract_branch.outputs.branch }}
+          build_dir: dist/docs #deploy/compas_slicer
           keep_history: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
