--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -43,7 +43,7 @@ jobs:
             fi;
           fi;
           echo "Docs will be deployed to https://github.com/dbt-ethz/compas_slicer/$BRANCH_OR_TAG"
-          mkdir -p deploy/compas_slicer/$BRANCH_OR_TAG && mv -T dist/docs deploy/compas_slicer/$BRANCH_OR_TAG/
+          mkdir -p deploy/compas_slicer/$BRANCH_OR_TAG && mv -T dist/docs dist/docs/$BRANCH_OR_TAG/
 
 #       - name: Extract branch name
 #         run: |
