--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -45,29 +45,12 @@ jobs:
           echo "Docs will be deployed to https://github.com/dbt-ethz/compas_slicer/$BRANCH_OR_TAG"
           mkdir -p deploy/compas_slicer/$BRANCH_OR_TAG && mv -T dist/docs dist/docs/$BRANCH_OR_TAG/
 
-#       - name: Extract branch name
-#         run: |
-#           echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-#         id: extract_branch
-
       - name: Deploy docs
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
         with:
-          target_branch: gh_docs  #${{ steps.extract_branch.outputs.branch }}
-          build_dir: dist/docs #deploy/compas_slicer
+          target_branch: gh_docs 
+          build_dir: dist/docs 
           keep_history: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
-#      - name: Deploy docs
-#        if: success()
-#        uses: crazy-max/ghaction-github-pages@v2
-#        with:
-#          repo: https://github.com/dbt-ethz/compas_slicer
-#          target_branch: master
-#          build_dir: deploy
-#          keep_history: true
-#        env:
-#          GH_PAT: ${{ secrets.GH_PAT }}
