--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,47 +10,30 @@ on:
 #      - master
 
 jobs:
-  build:
-    name: build and deploy docs
+    needs: build-packages
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 3.8
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install cython --install-option="--no-cython-compile"
+          pip install cython --install-option='--no-cython-compile'
       - name: Install
         run: |
-          python -m pip install --no-cache-dir -r requirements-dev.txt
-      - name: Generate docs
-        if: ${{ success() }}
+          pip install --no-cache-dir -r requirements-dev.txt
+      - name: Build docs with sphinx
         run: |
           rm -rf dist/docs && invoke docs
-          # Get branch/tag/latest name from git
-          GITHUB_REF_REGEX="tags/([0-9a-zA-Z\.\-]+)|(pull/[0-9]+)|heads/(.+)"
-          if [[ $GITHUB_REF =~ $GITHUB_REF_REGEX ]]; then
-            if [[ $BASH_REMATCH = pull* ]]; then
-              BRANCH_OR_TAG=pull_${BASH_REMATCH##*/}
-            else
-              BRANCH_OR_TAG=${BASH_REMATCH##*/}
-            fi;
-            if [[ $BRANCH_OR_TAG = master ]]; then
-              BRANCH_OR_TAG=latest
-            fi;
-          fi;
-          echo "Docs will be deployed to https://github.com/dbt-ethz/compas_slicer/$BRANCH_OR_TAG"
-          mkdir -p dist/docs/$BRANCH_OR_TAG && mv -T dist/docs dist/docs/$BRANCH_OR_TAG/
-
       - name: Deploy docs
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
         with:
-          target_branch: gh_docs 
-          build_dir: dist/docs 
+          target_branch: gh-pages
+          build_dir: dist/docs
           keep_history: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
