--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 attrs>=19.2.0
-compas_fab @ git+https://github.com/compas-dev/compas_fab.git#egg=compas_fab
-
+# compas_fab @ git+https://github.com/compas-dev/compas_fab.git#egg=compas_fab
 #compas_fab>=0.11,<0.12,
-
 rdp==0.8
 meshcut==0.2.1
-mlrose==1.3.0
 pyclipper==1.2.0
 progress==1.5
+compas~=0.16.7
+numpy~=1.19.1
+networkx~=2.5
