--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,13 @@
 name: build
 
 on:
-  [push]
-#  push:
-#    branches:
-#      - master
-#  pull_request:
-#    branches:
-#      - master
+#  [push]
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build-packages:
