--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
     "python.linting.enabled": true,
-    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\envs\\stratum-dev\\python.exe"
+    "python.pythonPath": "C:\\Users\\joburger\\Anaconda3\\envs\\compas_slicer\\python.exe"
 }
