--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [windows-latest] #ubuntu-latest, macos-latest, ]
         python-version: [3.7]
 
     steps:
@@ -40,6 +40,7 @@ jobs:
       - name: Test with pytest
         run: |
           invoke test
+
   build-docs:
     needs: build-packages
     runs-on: ubuntu-latest
