Prepare for workflow releasing

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,23 +1,26 @@
 graft src
 
 prune .github
+prune .vscode
 
 prune data
 prune docs
-prune docsource
 prune examples
 prune temp
 prune tests
+prune scripts
 
 include LICENSE
 include README.md
 include AUTHORS.md
-include CHANGELOG.md
+include CHANGELOG.rst
 include requirements.txt
+include CONTRIBUTING.md
 
 exclude requirements-dev.txt 
 exclude pytest.ini .bumpversion.cfg .editorconfig
 exclude tasks.py
-exclude CONTRIBUTING.md
+exclude .gitmodules
+
 
 global-exclude *.py[cod] __pycache__ *.dylib *.nb[ic] .DS_Store
