--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,6 @@
 autopep8
 attrs >=17.4
-bumpversion >=0.5
+bump2version >=1.0
 check-manifest >=0.36
 doc8
 flake8
@@ -12,7 +12,7 @@ m2r
 nbsphinx
 pydocstyle
 pytest >=3.2
-sphinx_compas_theme >=0.4
+sphinx_compas_theme >=0.12
 sphinx >=1.6
 twine
 -e .
