--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,6 +4,10 @@ message = Bump version to {new_version}
 commit = True
 tag = True
 
+[bumpversion:file:setup.py]
+search = version="{current_version}"
+replace = version="{new_version}"
+
 [bumpversion:file:docs/conf.py]
 search = version = release = '{current_version}'
 replace = version = release = '{new_version}'
