--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ numpy
 progressbar2>=3.53
 pyclipper>=1.2.0
 rdp>=0.8
-git+https://github.com/geometryprocessing/libigl-python-bindings@2.2.1#egg=igl
+igl @ git+git://github.com/geometryprocessing/libigl-python-bindings@2.2.1#egg=igl
