--- a/.github/workflows/deploy-n-publish.yml
+++ b/.github/workflows/deploy-n-publish.yml
@@ -16,15 +16,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
+      - name: 🔗 Install dependencies with miniconda and python 3.8
+        uses: conda-incubator/setup-miniconda@v2
         with:
+          activate-environment: compas_slicer
+          environment-file: environment.yml
           python-version: 3.8
-      - name: 🔗 Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install wheel
-          python -m pip install cython --install-option="--no-cython-compile"
+          auto-activate-base: false
+          auto-update-conda: true
+      - name: 📶 Conda info
+        run: conda info
       - name: 💎 Install
         run: |
           python -m pip install --no-cache-dir -r requirements-dev.txt
