--- a/.github/workflows/deploy-n-publish.yml
+++ b/.github/workflows/deploy-n-publish.yml
@@ -14,6 +14,9 @@ jobs:
   build:
     name: build and deploy docs
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
     steps:
       - uses: actions/checkout@v2
       - name: 🔗 Install dependencies with miniconda and python 3.8
