Modernize project for Python 3.9+ and COMPAS 2.x
Build System:
- Migrate from setup.py/setup.cfg to pyproject.toml
- Remove MANIFEST.in, pytest.ini (config now in pyproject.toml)
- Update Python requirement to >=3.9
- Replace flake8/autopep8/isort with ruff for linting/formatting
- Add mypy for optional type checking

Dependencies:
- compas>=2.0 (was <2.0)
- numpy>=1.24 (remove restrictive upper bound)
- networkx>=3.0
- progressbar2>=4.0
- pyclipper>=1.3
- libigl>=2.5

COMPAS 2.x Migration:
- Replace compas._os.absjoin() with pathlib.Path
- Update pairwise import: compas.utilities -> compas.itertools
- Replace mesh_weld(mesh) with mesh.weld() method
- Modernize compas_slicer_ghpython install.py for COMPAS 2.x

Python 3.9+ Modernization:
- Remove all __future__ imports (14 files)
- Remove explicit (object) inheritance from classes
- Use pathlib.Path throughout
- Use f-strings consistently

CI/CD:
- Test matrix: Python 3.9/3.10/3.11/3.12
- Test on ubuntu/windows/macos
- Use ruff for linting, mypy for type checking
- Update GitHub Actions to v4/v5

Tasks:
- Add invoke tasks: lint, format, typecheck
- Update release task to use python -m build

--- a/environment.yml
+++ b/environment.yml
@@ -2,11 +2,14 @@ name: compas_slicer
 channels:
   - conda-forge
 dependencies:
-  - python
+  - python>=3.9
   - pip
-  - compas=1.16.0
-  - networkx
-  - numpy
-  - progressbar2=3.53
-  - pyclipper=1.2.0
-  - rdp=0.8
+  - compas>=2.0
+  - networkx>=3.0
+  - numpy>=1.24
+  - progressbar2>=4.0
+  - pyclipper>=1.3
+  - rdp>=0.8
+  - libigl>=2.5
+  - pip:
+    - -e .
