--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,16 +1,16 @@
 [bumpversion]
-current_version = 0.7.0
+current_version = 0.8.0
 message = Bump version to {new_version}
 commit = True
 tag = True
 
-[bumpversion:file:setup.py]
-search = version="{current_version}"
-replace = version="{new_version}"
+[bumpversion:file:pyproject.toml]
+search = version = "{current_version}"
+replace = version = "{new_version}"
 
 [bumpversion:file:docs/conf.py]
-search = version = release = '{current_version}'
-replace = version = release = '{new_version}'
+search = version = release = "{current_version}"
+replace = version = release = "{new_version}"
 
 [bumpversion:file:docs/doc_versions.txt]
 search = {current_version}
@@ -18,8 +18,8 @@ replace = {new_version}
 	{current_version}
 
 [bumpversion:file:src/compas_slicer/__init__.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
 
 [bumpversion:file:CHANGELOG.rst]
 search = Unreleased
