--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,18 +1,13 @@
-autopep8
-attrs >=17.4
-bump2version >=1.0
-check-manifest >=0.36
-doc8
-flake8
-invoke >=0.14
-ipykernel
-ipython >=5.8
-isort
-m2r
+invoke>=2.0
+pytest>=7.0
+pytest-cov
+ruff
+mypy
+sphinx>=6.0
+sphinx_compas_theme>=0.24
 nbsphinx
-pydocstyle
-pytest >=3.2
-sphinx_compas_theme >=0.12
-sphinx >=1.6
+ipykernel
+ipython>=8.0
+bump2version>=1.0
 twine
 -e .
