--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-attrs>=19.2.0
-compas>=1.16.0,<2.0.0
-networkx>=2.5,<3.2
-numpy<=1.23.2
-progressbar2>=3.53,<4.4
-pyclipper>=1.2.0,<1.3.0
-rdp==0.8
-libigl>=2.4.1,<2.5.0
+attrs>=21.0
+compas>=2.0
+networkx>=3.0
+numpy>=1.24
+progressbar2>=4.0
+pyclipper>=1.3
+rdp>=0.8
+libigl>=2.5
