fix mypy errors: direct imports, type annotations, mypy config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,6 +96,10 @@ warn_unused_configs = true
 ignore_missing_imports = true
 exclude = ["tests", "docs", "examples", "scripts"]
 
+[[tool.mypy.overrides]]
+module = ["compas_slicer.slicers.*", "compas_slicer.print_organization.*", "compas_slicer.pre_processing.*"]
+disable_error_code = ["no-redef", "operator"]
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py", "*_test.py"]
