--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,8 @@ channels:
 dependencies:
   - python>=3.9
   - pip
+  # core
+  - attrs>=21.0
   - compas>=2.0
   - networkx>=3.0
   - numpy>=1.24
@@ -11,5 +13,18 @@ dependencies:
   - pyclipper>=1.3
   - rdp>=0.8
   - libigl>=2.5
+  # dev
+  - invoke>=2.0
+  - pytest>=7.0
+  - pytest-cov
+  - ruff
+  - mypy
+  - sphinx>=6.0
+  - sphinx_compas_theme>=0.24
+  - nbsphinx
+  - ipykernel
+  - ipython>=8.0
+  - twine
   - pip:
+    - bump2version>=1.0
     - -e .
