--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,12 +30,13 @@ classifiers = [
 dependencies = [
     "attrs>=21.0",
     "compas>=2.0",
+    "compas-libigl>=0.7",
+    "libigl>=2.5",
     "networkx>=3.0",
     "numpy>=1.24",
     "progressbar2>=4.0",
     "pyclipper>=1.3",
     "rdp>=0.8",
-    "libigl>=2.5",
 ]
 
 [project.urls]
