--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,10 +33,12 @@ dependencies = [
     "compas_cgal>=0.8",
     "compas-libigl>=0.8",
     "networkx>=3.0",
+    "numba>=0.58",
     "numpy>=1.24",
     "progressbar2>=4.0",
     "pyclipper>=1.3",
     "rdp>=0.8",
+    "scipy>=1.10",
 ]
 
 [project.urls]
@@ -48,6 +50,7 @@ Repository = "https://github.com/compas-dev/compas_slicer"
 dev = [
     "invoke>=2.0",
     "pytest>=7.0",
+    "pytest-benchmark",
     "pytest-cov",
     "ruff",
     "mypy",
