add examples to test suite, add compas_cgal dep, fix compas 2.x compat

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ classifiers = [
 dependencies = [
     "attrs>=21.0",
     "compas>=2.0",
+    "compas_cgal>=0.8",
     "compas-libigl>=0.8",
     "networkx>=3.0",
     "numpy>=1.24",
