--- a/environment.yml
+++ b/environment.yml
@@ -7,11 +7,14 @@ dependencies:
   # core
   - attrs>=21.0
   - compas>=2.0
+  - compas_cgal>=0.8
   - networkx>=3.0
+  - numba>=0.58
   - numpy>=1.24
   - progressbar2>=4.0
   - pyclipper>=1.3
   - rdp>=0.8
+  - scipy>=1.10
   # dev
   - invoke>=2.0
   - pytest>=7.0
