add compas_viewer visualization to examples
- new visualization.py with should_visualize() and visualize_slicer()
- skip viz when pytest in sys.modules
- examples get visualize param, default False
- compas_viewer as optional [viz] dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,9 @@ Documentation = "https://compas.dev/compas_slicer"
 Repository = "https://github.com/compas-dev/compas_slicer"
 
 [project.optional-dependencies]
+viz = [
+    "compas_viewer>=1.2",
+]
 dev = [
     "invoke>=2.0",
     "pytest>=7.0",
