--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,8 @@ dependencies:
   - pyclipper>=1.4
   - rdp>=0.8
   - scipy>=1.16
+  # viz
+  - compas_viewer>=1.2
   # dev
   - invoke>=2.0
   - pytest>=7.0
