--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "attrs>=21.0",
     "compas>=2.0",
     "compas_cgal>=0.8",
+    "loguru>=0.7",
     "networkx>=3.0",
     "numba>=0.58",
     "numpy>=1.24",
