--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -1,4 +1,4 @@
-name: verify-pr-checklist
+name: PR Checks
 on:
   pull_request:
     types: [assigned, opened, synchronize, reopened, labeled, unlabeled]
@@ -7,11 +7,18 @@ on:
       - master
 
 jobs:
-  build:
-    name: Check Actions
+  lint:
+    name: Ruff
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v4
+      - uses: astral-sh/ruff-action@v3
+
+  changelog:
+    name: Changelog
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
       - name: Changelog check
         uses: Zomzog/changelog-checker@v1.1.0
         with:
