--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
     "pyclipper>=1.4",
     "rdp>=0.8",
     "scipy>=1.16",
+    "tomli>=2.0; python_version < '3.11'",
 ]
 
 [project.urls]
@@ -69,7 +70,7 @@ dev = [
 where = ["src"]
 
 [tool.setuptools.package-data]
-"*" = ["*.json", "*.obj"]
+"*" = ["*.json", "*.obj", "*.toml"]
 
 [tool.ruff]
 target-version = "py39"
