--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,13 +57,13 @@ dev = [
     "pytest-cov",
     "ruff",
     "mypy",
-    "sphinx>=6.0",
-    "sphinx_compas_theme>=0.24",
-    "nbsphinx",
-    "ipykernel",
-    "ipython>=8.0",
     "bump2version>=1.0",
     "twine",
+]
+docs = [
+    "mkdocs>=1.6",
+    "mkdocs-material>=9.5",
+    "mkdocstrings[python]>=0.27",
 ]
 
 [tool.setuptools.packages.find]
