--- a/src/compas_slicer/data/defaults.toml
+++ b/src/compas_slicer/data/defaults.toml
@@ -11,8 +11,8 @@ avg_layer_height = 5.0
 min_layer_height = 0.5
 max_layer_height = 10.0
 vertical_layers_max_centroid_dist = 25.0
-target_low_geodesics_method = "heat_igl"
-target_high_geodesics_method = "heat_igl"
+target_low_geodesics_method = "heat_cgal"
+target_high_geodesics_method = "heat_cgal"
 target_high_union_method = "min"
 target_high_union_params = []
 uneven_upper_targets_offset = 0.0
