--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,8 +3,17 @@ name: docs
 on:
   push:
     branches: [master]
+    paths:
+      - 'docs/**'
+      - 'mkdocs.yml'
+      - '.github/workflows/docs.yml'
   pull_request:
     branches: [master]
+    paths:
+      - 'docs/**'
+      - 'mkdocs.yml'
+      - '.github/workflows/docs.yml'
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -27,6 +36,15 @@ jobs:
       - name: Build docs
         run: mkdocs build --strict
 
-      - name: Deploy to GitHub Pages
+      - name: Configure git for mike
         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-        run: mkdocs gh-deploy --force
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+
+      - name: Deploy docs with mike
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        run: |
+          git fetch origin gh-pages --depth=1
+          mike deploy --push --update-aliases latest stable
+          mike set-default --push latest
