--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -155,5 +155,9 @@ extra:
 extra_css:
   - stylesheets/extra.css
 
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+
 watch:
   - src/compas_slicer
